# nowledge

./: .dockerignore  .example.env  .npmignore  CONTRIBUTING.md  Dockerfile  README.md  USAGE.md  docker-compose.yml  docs.db  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json
.cursor/: mcp.json
crawler/: Dockerfile  go.mod  go.sum  main.go
embedder/: Dockerfile  go.mod  go.sum  main.go
native-core/: Cargo.toml
prompts/: nowledge-tasks.md
rqlite/: Dockerfile
scripts/: download-model.py  embed.py  setup-sqlite-vec.sh
src/: cli.ts  constants.ts  index.ts  lib.rs  main.ts  run.ts
src/commands/: _shared.ts  index.ts  ingest.ts  init.ts  mcp.ts  query.ts  vacuum.ts  watch.ts
src/converter/: htmlToMarkdown.ts
src/db/: sqlite-vec.ts
src/embeddings/: nomic.ts
src/lib/: chunker.ts  embedder.ts  httpCrawler.ts  linkRewrite.ts  rqliteDB.ts  storage.ts  summariser.ts
src/schemas/: nowledge.ts
src/tools/: fetch.ts  markdown-ingest.ts  nowledge.ts  nowledgeSearch.ts
src/utils/: cliArgs.ts  dbHelpers.ts  extractKeyword.ts  fileExtensions.ts
test-docs/: getting-started.md  troubleshooting.md
tests/: client.test.ts  crawler.test.ts  nowledge.test.ts
