[package]
name = "nowledge_native"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false                          # internal crate

[lib]
crate-type = ["cdylib"]

[dependencies]
napi           = { version = "2", features = ["serde-json"] }
napi-derive    = "2"
once_cell      = "1.19"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokenizers     = { version = "0.15.1", default-features = false, features = ["download"] }

[package.metadata.napi]
name = "nowledge_native"